# macVNC

./: .gitignore  AUTHORS  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: ScreenCapturer.h  ScreenCapturer.m  icon.icns  mac.c  mac.m
